--- a/sample.env
+++ b/sample.env
@@ -1,8 +1,7 @@
-# ____REMOVE THIS LINE AFTER RENAMING sample.env to .env ____
 DATABASE_URL=
-SESSION_ID=
-REMOVEBG_KEY=
-PREFIX=
-MODE=
-autoRead=
-statusview=
+SESSION_ID=Xlicon_d3d2be08-51c1-4972-9435-4dec646101b3
+REMOVEBG_KEY=5CZjuv3AHqimTjsjB3zA5TyJ
+PREFIX=.
+MODE=public
+autoRead=false
+statusview=true
