--- a/sample.env
+++ b/sample.env
@@ -1,4 +1,4 @@
-DATABASE_URL=
+DATABASE_URL=postgresql://stikerboy350_user:gSGwn5zlCFCIgn9WpOjz9au76vuJdlWs@dpg-crhfj4aj1k6c73e19ksg-a.singapore-postgres.render.com/stikerboy350
 SESSION_ID=Xlicon_d3d2be08-51c1-4972-9435-4dec646101b3
 REMOVEBG_KEY=5CZjuv3AHqimTjsjB3zA5TyJ
 PREFIX=.
